--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Mapa</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin="">
     </script>
-    <link rel="stylesheet" href="./style/map.css"/>
+    <link rel="stylesheet" href="./style/index.css"/>
 </head>
 
 <body>
