Adição do display de escala e do botão para adicionar marcador.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     <br>
     <h1 id="titulo">Mapa</h1>
     <br>
-    <div class="center" >
+    <div class="center">
         <div id="map"></div>
+    </div>
+    <br>
+    <div class="center">
+        <button id="addMarcador" onclick="addMarcador()">Adicionar Marcador</button>
+        <span id="mensagem"></span>
     </div>
     
 </body>
